[FIX] Blocks header image text too big on mobile

--- a/app/assets/stylesheets/briarcliff/_blocks.scss
+++ b/app/assets/stylesheets/briarcliff/_blocks.scss
@@ -107,6 +107,11 @@ $grey_light: $g0;
   }
 }
 
+.block-c2a {
+  @include button();
+  font-size: 1em;
+}
+
 .block-image-contents {
   position: absolute;
   margin: auto;
@@ -115,11 +120,9 @@ $grey_light: $g0;
   text-align: center;
   bottom: 30%;
   width: 100%;
-}
-
-.block-c2a {
-  @include button();
-  font-size: 1em;
+  @include bp-small {
+    bottom: 10%;
+  }
 }
 
 .block-image-header {
@@ -131,6 +134,9 @@ $grey_light: $g0;
   }
   @include bp-medium{
     font-size: 2em;
+  }
+  @include bp-small{
+    font-size: 1.8em;
   }
 }
 
@@ -196,7 +202,7 @@ $grey_light: $g0;
   }
 }
 
-.block--hero {
+.blocks--hero {
   max-width: 100%;
   margin-top: -3em;
 }
